# ndx

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  NOTICE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.ndx/: settings.json
codex-rs/: Cargo.toml
codex-rs/process/: Cargo.toml  README.md
codex-rs/process/docs/: api.md  architecture.md  constraints.md  internals.md  overview.md  testing.md  usage.md
codex-rs/process/src/: lib.rs  manager.rs  queue.rs  types.rs
codex-rs/process/tests/plans/: process-library-20260429.md
codex-rs/process/tests/reports/process-library/: 20260429_122934.md
docs/: agent-loop.md  agents_md.md  api.md  architecture.md  config.md  constraints.md  contributing.md  install.md  internals.md  overview.md  skills.md  slash_commands.md  system-architecture-ko.md  system-architecture.md  testing.md  usage.md
scripts/: mock_responses_websocket_server.py
src/: abort.ts  agent.ts  cli.ts  config.ts  errors.ts  mock-client.ts  openai.ts  protocol.ts  runtime.ts  session-client.ts  session-log-store.ts  session-log-writer.ts  session-server.ts  types.ts
src/agent/: loop.ts
src/cli/: auth.ts  lifetime.ts  main.ts  ndxserver.ts  session-client.ts  settings-wizard.ts  workspace.ts
src/config/: core-tools.ts  defaults.ts  (+2 more)
tests/: agent.test.ts  cli-session-client.test.ts  cli-workspace.test.ts  config.test.ts  model-adapters.test.ts  process.test.ts  runtime.test.ts  session-image-scenarios.mjs  session-server.test.ts  settings-wizard.test.ts  tool-orchestration.test.ts  tools.test.ts
(+265 files in other folders)
