[package]
name = "codex-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_process"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
